프론트 코드별로 영역분리( html, js, css)